--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
-front:
+lumen:
   build: .
   ports:
-    - "80:80"
+    - "8000:80"
     - "443:443"
     - "9000:9000"
   links:
     - mysql:mysql
-    - mongo:mongo
-    - memcached:memcached
-    - redis:redis
-    - elasticsearch:elasticsearch
-    - rabbitmq:rabbitmq
   volumes:
     - ./www:/var/www
     - ./sites:/etc/nginx/conf.d
@@ -22,30 +17,3 @@ mysql:
     - "3306:3306"
   environment:
     MYSQL_ROOT_PASSWORD: password
-
-mongo:
-  image: mongo
-  ports:
-    - "27017:27017"
-
-memcached:
-  image: memcached
-  ports:
-    - "11211:11211"
-
-redis:
-  image: redis
-  ports:
-    - "6379:6379"
-
-elasticsearch:
-  image: elasticsearch
-  ports:
-    - "9200:9200"
-    - "9300:9300"
-
-rabbitmq:
-  image: rabbitmq:3.6.1-management
-  ports:
-    - "15672:15672"
-    - "5672:5672"
